--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Product App</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     
-    <div id="app">
+    <div class="nav-bar"></div>
 
-        <h1>{{ product }}</h1>
+    <div id="app">
+        <div class="product">
+            <div class="product-image">
+                <img v-bind:src="image" alt="">
+            </div>
+
+            <div class="product-info">
+                <h1>{{ product }}</h1>
+            </div>
+
+        </div>
 
     </div>
 
