--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
 
-                <div v-for="variant in variants" :key="variant.variantId">
-                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+                <div v-for="variant in variants" 
+                    :key="variant.variantId"
+                    class="color-box"
+                    :style="{ backgroundColor: variant.variantColor }"
+                    @mouseover="updateProduct(variant.variantImage)">
+                    <!-- <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p> -->
                     <!-- <p>{{ variant.variantColor }}</p> -->
                 </div>
 
-                <button v-on:click="addToCart">Add to Cart</button>
+                <button v-on:click="addToCart" 
+                :disabled="!inStock"
+                :class="{ disabledButton: !inStock }">Add to Cart</button>
                 <!-- <button v-on:click="cart += 1">Add to Cart</button> -->
 
                 <div class="cart">
