--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             </div>
 
             <div class="product-info">
-                <h1>{{ product }}</h1>
+                <h1>{{ title }}</h1>
+                <!-- <h1>{{ brand }} {{ product }}</h1> -->
                 <p v-if="inStock">In Stock</p>
                 <!-- <p v-if="inventory > 10">In Stock</p>
                 <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p> -->
@@ -27,12 +28,14 @@
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
-
-                <div v-for="variant in variants" 
+                
+                <!-- <div v-for="variant in variants"  -->
+                <div v-for="(variant, index) in variants"
                     :key="variant.variantId"
                     class="color-box"
                     :style="{ backgroundColor: variant.variantColor }"
-                    @mouseover="updateProduct(variant.variantImage)">
+                    @mouseover="updateProduct(index)">
+                    <!-- @mouseover="updateProduct(variant.variantImage)"> -->
                     <!-- <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p> -->
                     <!-- <p>{{ variant.variantColor }}</p> -->
                 </div>
