--- a/index.html
+++ b/index.html
@@ -12,45 +12,47 @@
     <div class="nav-bar"></div>
 
     <div id="app">
-        <div class="product">
+        <product :premium="premium"></product>
+
+        <!-- <div class="product">
             <div class="product-image">
                 <img v-bind:src="image" alt="">
             </div>
 
             <div class="product-info">
-                <h1>{{ title }}</h1>
+                <h1>{{ title }}</h1> -->
                 <!-- <h1>{{ brand }} {{ product }}</h1> -->
-                <p v-if="inStock">In Stock</p>
+                <!-- <p v-if="inStock">In Stock</p> -->
                 <!-- <p v-if="inventory > 10">In Stock</p>
                 <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p> -->
-                <p v-else>Out of Stocks</p>
+                <!-- <p v-else>Out of Stocks</p> -->
 
-                <ul>
+                <!-- <ul>
                     <li v-for="detail in details">{{ detail }}</li>
-                </ul>
+                </ul> -->
                 
                 <!-- <div v-for="variant in variants"  -->
-                <div v-for="(variant, index) in variants"
+                <!-- <div v-for="(variant, index) in variants"
                     :key="variant.variantId"
                     class="color-box"
                     :style="{ backgroundColor: variant.variantColor }"
-                    @mouseover="updateProduct(index)">
+                    @mouseover="updateProduct(index)"> -->
                     <!-- @mouseover="updateProduct(variant.variantImage)"> -->
                     <!-- <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p> -->
                     <!-- <p>{{ variant.variantColor }}</p> -->
-                </div>
+                <!-- </div> -->
 
-                <button v-on:click="addToCart" 
+                <!-- <button v-on:click="addToCart" 
                 :disabled="!inStock"
-                :class="{ disabledButton: !inStock }">Add to Cart</button>
+                :class="{ disabledButton: !inStock }">Add to Cart</button> -->
                 <!-- <button v-on:click="cart += 1">Add to Cart</button> -->
 
-                <div class="cart">
+                <!-- <div class="cart">
                     <p>Cart{{cart}}</p>
                 </div>
             </div>
 
-        </div>
+        </div> -->
 
     </div>
 
